tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_imports_warns_on_re_export_of_item_with_less_visibility/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: cannot re-export baz because it has less visibility than this use statement
  ┌─ src/main.nr:7:22
  │
7 │         pub use bar::baz;
  │                      --- consider marking baz as pub
  │

Aborting due to 1 previous error
